--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <nav class="navbar navbar-inverse ">
         <ul class="nav nav-pills">
 
-            <li role="presentation"><a href="#" class="navbarcolorandstrong" >Project name</a></li>
+            <li role="presentation"><a href="#" class="navbarcolorandstrong" >Love Ra*bits</a></li>
             <li role="presentation"class="active"><a href="#" class="navbarcolor">Home</a></li>
             <li role="presentation"><a href="#" class="navbarcolor">Profile</a></li>
             <li role="presentation"><a href="#" class="navbarcolor">Messages</a></li>
