--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Bootstrap practise of hl</title>
+    <title>Bootstrap practise of HL</title>
     <link rel="stylesheet" href="./bootstrap-3.3.7-dist/css/bootstrap.css">
     <script src="./bootstrap-3.3.7-dist/js/jquery.min.js"></script>
     <script src="./bootstrap-3.3.7-dist/js/bootstrap.js"></script>
@@ -10,7 +10,7 @@
 </head>
 
 
-<body>
+<body id="back-to-top">
 
 <!--轮播（Carousel）-->
 <div id="myCarousel" class="carousel slide">
@@ -64,11 +64,11 @@
 
 <!--navigate bar-->
 <div class="container navbarposition ">
-    <nav class="navbar navbar-inverse ">
+    <!--<nav class="navbar  navbar-inverse">-->
         <ul class="nav nav-pills">
 
             <li role="presentation"><a href="#" class="navbarcolorandstrong" >Love Ra*bits</a></li>
-            <li role="presentation"class="active"><a href="#" class="navbarcolor">Home</a></li>
+            <li role="presentation" class="active"><a href="#" class="navbarcolor">Home</a></li>
             <li role="presentation"><a href="#" class="navbarcolor">Profile</a></li>
             <li role="presentation"><a href="#" class="navbarcolor">Messages</a></li>
 
@@ -81,16 +81,122 @@
                     <li><a href="#">Another action</a></li>
                     <li><a href="#">Something else here</a></li>
                     <li role="separator" class="divider"></li>
+
                     <li><a href="#">Separated link</a></li>
                 </ul>
             </li>
 
 
         </ul>
-    </nav>
+    <!--</nav>-->
 </div>
 
 
+<div>&nbsp;&nbsp;</div>
+
+
+<!--缩略图&&3Headings-->
+<div class="row ">
+    <div class="col-sm-6 col-md-4 ">
+        <div class="thumbnail">
+            <img src="./pictures/140*140.jpg"  class="center round">
+            <div class="caption center">
+                <h3>Heading1</h3>
+                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
+                <p> <a href="#" class="btn btn-default" role="button">View details>></a></p>
+            </div>
+        </div>
+    </div>
+    <!--========-->
+    <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+            <img src="./pictures/natsna.jpg"  class="center round">
+            <div class="caption center">
+                <h3>Heading2</h3>
+                <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                <p> <a href="#" class="btn btn-default" role="button">View details>></a></p>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+            <img src="./pictures/hajimeQ.jpg"  class="center round">
+            <div class="caption center">
+                <h3>Heading3</h3>
+                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                <p> <a href="#" class="btn btn-default" role="button">View details>></a></p>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+<!--detailed behind-->
+
+<div class="container" >
+    <table width="100%" border="0">
+        <tr>
+            <td width="70%">
+
+                <div class="jumbotron backcolor whitewords">
+                    <h1 >First featurette headling. </h1>
+                    <h1>It'll blow your mind.</h1>
+                    <p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+                </div>
+
+            </td>
+            <td>
+                    <img src="./pictures/04.jpeg">
+            </td>
+        </tr>
+    </table>
+
+</div>
+<div class="container" >
+    <table width="100%" border="0">
+        <tr>
+            <td>
+                <img src="./pictures/05.jpeg">
+            </td>
+            <td width="70%">
+
+                <div class="jumbotron backcolor whitewords">
+                    <h1 >Oh yeah, it's that good. </h1>
+                    <h1> See for yourself.</h1>
+                    <p >Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+                </div>
+
+            </td>
+        </tr>
+    </table>
+
+</div>
+<div class="container" >
+    <table width="100%" border="0">
+        <tr>
+            <td width="70%">
+
+                <div class="jumbotron backcolor whitewords">
+                    <h1 >And lastly, this one.</h1>
+                    <h1> Checkmate. </h1>
+                    <p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+                </div>
+
+            </td>
+            <td>
+                <img src="./pictures/06.jpeg">
+            </td>
+        </tr>
+    </table>
+
+</div>
+<div>&nbsp;</div>
+
+<div align="center">
+    <a href="#back-to-top">--- Love Ra*bits ---</a>
+</div>
+
+<div>&nbsp;</div>
 
 </body>
 </html>
