--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
 
 
 <!--缩略图&&3Headings-->
-<div class="row ">
-    <div class="col-sm-6 col-md-4 ">
-        <div class="thumbnail">
+<div class="row " >
+    <div class="col-sm-6 col-md-4 " >
+        <div class="thumbnail noborder" >
             <img src="./pictures/140*140.jpg"  class="center round">
             <div class="caption center">
                 <h3>Heading1</h3>
@@ -109,7 +109,7 @@
     </div>
     <!--========-->
     <div class="col-sm-6 col-md-4">
-        <div class="thumbnail">
+        <div class="thumbnail noborder">
             <img src="./pictures/natsna.jpg"  class="center round">
             <div class="caption center">
                 <h3>Heading2</h3>
@@ -119,7 +119,7 @@
         </div>
     </div>
     <div class="col-sm-6 col-md-4">
-        <div class="thumbnail">
+        <div class="thumbnail noborder">
             <img src="./pictures/hajimeQ.jpg"  class="center round">
             <div class="caption center">
                 <h3>Heading3</h3>
