--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
             </td>
             <td>
-                    <img src="./pictures/04.jpeg">
+                    <img src="./pictures/04.jpeg" class="imgbehind">
             </td>
         </tr>
     </table>
@@ -156,7 +156,7 @@
     <table width="100%" border="0">
         <tr>
             <td>
-                <img src="./pictures/05.jpeg">
+                <img src="./pictures/05.jpeg" class="imgbehind">
             </td>
             <td width="70%">
 
@@ -184,7 +184,7 @@
 
             </td>
             <td>
-                <img src="./pictures/06.jpeg">
+                <img src="./pictures/06.jpeg" class="imgbehind">
             </td>
         </tr>
     </table>
