--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <a class="dropdown-toggle navbarcolor" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" >
                     Dropdown <span class="caret"></span>
                 </a>
-                <ul class="dropdown-menu">
+                <ul class="dropdown-menu dropdown">
                     <li><a href="#">Action</a></li>
                     <li><a href="#">Another action</a></li>
                     <li><a href="#">Something else here</a></li>
